feat: 规整目录结构 feat: 增加jvm监控测试用类

--- a/basic/src/main/resources/application.yml
+++ b/basic/src/main/resources/application.yml
@@ -1,1 +1,29 @@
+server:
+  port: 8004
 
+spring:
+  profiles:
+    active: dev
+
+mybatis-plus:
+  check-config-location: true
+  configuration:
+    map-underscore-to-camel-case: true
+  global-config:
+    db-config:
+      id-type: auto
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      mapper-locations: classpath*:mapper/**/*Mapper.xml
+# PageHelper分页插件
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
+
+logging:
+  level:
+    com.ibatis: debug
+    org.springframework.web: debug
+    cn.zsk: debug
