feat: 规整pom文件结构 feat: 修改打印方式

--- a/concurrency/src/main/resources/application.yml
+++ b/concurrency/src/main/resources/application.yml
@@ -42,3 +42,9 @@ pagehelper:
   reasonable: true
   supportMethodsArguments: true
   params: count=countSql
+
+logging:
+  level:
+    com.ibatis: debug
+    org.springframework.web: debug
+    cn.zsk: debug
